first passing feature test for posts/new

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,2 @@
-<h1>There are no posts in the system.</h1>
+<p>There are no posts in the system.</p>
+<p><%= link_to 'Add new post', new_post_path %></p>
