--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,9 @@
-<p>There are no posts in the system.</p>
+<% if @posts.all.any? %>
+    <% @posts.all.each do |post| %>
+        <h2><%= post.title %></h2>
+        <h2><%= post.content %></h2>
+    <% end %>
+<% else %>
+    <p>There are no posts in the system.</p>
+<% end %>
 <p><%= link_to 'Add new post', new_post_path %></p>
