failing feature tests for show a posts page should show a edit and delete link

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <% if @posts.all.any? %>
     <% @posts.all.each do |post| %>
-        <h2><%= post.title %></h2>
+        <h2><%= link_to post.title, post_path(post) %></h2>
         <h2><%= post.content %></h2>
     <% end %>
 <% else %>
