--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
 <p><%= @post.title %></p>
 <p><%= @post.content %></p>
+<p><%= link_to "Edit post", edit_post_path(@post.id)  %></p>
+<p><%= link_to "Delete post", post_path(@post.id), method: :delete  %></p>
