--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,9 @@
-<%= form_for @post do |f| %>
+<%= form_for @post, html: {multipart: true} do |f| %>
     <%= f.label :title %>
     <%= f.text_field :title %>
     <%= f.label :content %>
     <%= f.text_field :content %>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
     <%= f.submit %>
 <% end %>
