--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,27 @@
 
 <body>
 
+<nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="/">Insta Clone</a></h1>
+    </li>
+    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+
+
+    <!-- Left Nav Section -->
+        <ul class="left">
+          <li><%= link_to 'Add new post', new_post_path %></li>
+        </ul>
+  </section>
+</nav>
+
+
 <%= notice %>
 <%= yield %>
 
