--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,22 +1,37 @@
-<% if @posts.all.any? %>
-    <% @posts.all.each do |post| %>
-        <h2><%= link_to post.title, post_path(post) %></h2>
-        <h2><%= post.content %></h2>
-        <%= image_tag post.image.url(:thumb) %>
-        <h3>Comments for <%= post.title %></h3>
-        <% if post.comments.any? %>
-            <ul>
-              <% post.comments.each do |comment| %>
-                  <li>
-                    <%= comment.thoughts %>
-                  </li>
-              <% end %>
-            </ul>
+<main>
+  <div class="row">
+    <div class="large-12 columns">
+      <div class="panel">
+        <% if @posts.all.any? %>
+            <% @posts.all.each do |post| %>
+                <div class="row">
+                  <div class="large-12 columns">
+                    <div class="callout panel">
+                      <h4><%= link_to post.title, post_path(post) %></h4>
+
+                      <p><%= post.content %></p>
+                      <%= image_tag post.image.url(:thumb) %>
+                      <h5>Comments for <%= post.title %></h5>
+                      <% if post.comments.any? %>
+                          <ul>
+                            <% post.comments.each do |comment| %>
+                                <li>
+                                  <%= comment.thoughts %>
+                                </li>
+                            <% end %>
+                          </ul>
+                      <% else %>
+                          <p>No comments.</p>
+
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+            <% end %>
         <% else %>
-            <p>No comments.</p>
+            <p>There are no posts in the system.</p>
         <% end %>
-    <% end %>
-<% else %>
-    <p>There are no posts in the system.</p>
-<% end %>
-<p><%= link_to 'Add new post', new_post_path %></p>
+      </div>
+    </div>
+  </div>
+</main>
