--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,18 +25,21 @@
 
   <section class="top-bar-section">
     <!-- Right Nav Section -->
-
+    <ul class="right">
+      <li class="active"><a href="/users/sign_up">Sign up</a></li>
+      <li class="active"><a href="/users/sign_in">Sign in</a></li>
+    </ul>
 
     <!-- Left Nav Section -->
-        <ul class="left">
-          <li><%= link_to 'Add new post', new_post_path %></li>
-        </ul>
+    <ul class="left">
+      <li><%= link_to 'Add new post', new_post_path %></li>
+    </ul>
   </section>
 </nav>
 
 <p class="notice"><%= notice %></p>
+
 <p class="alert"><%= alert %></p>
-<%= notice %>
 <%= yield %>
 
 </body>
