--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,20 @@
 
   <section class="top-bar-section">
     <!-- Right Nav Section -->
-    <ul class="right">
-      <li class="active"><a href="/users/sign_up">Sign up</a></li>
-      <li class="active"><a href="/users/sign_in">Sign in</a></li>
-    </ul>
+    <% if user_signed_in? %>
+        <ul class="right">
+          <li class="name">
+            <h2><font color="white">Signed in as: <%= current_user.email %></font></h2>
+          </li>
+          <li class="active"><%= link_to "Edit user", edit_user_registration_path %></li>
+          <li class="active"><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+        </ul>
+    <% else %>
+        <ul class="right">
+          <li class="active"><%= link_to "Sign up", new_user_registration_path %></li>
+          <li class="active"><%= link_to "Sign in", new_user_session_path %></li>
+        </ul>
+    <% end %>
 
     <!-- Left Nav Section -->
     <ul class="left">
