fixed aws sr upload, moved add comment to index views

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,6 +24,7 @@
                           <p>No comments.</p>
 
                       <% end %>
+                      <p><%= link_to "Add comment", new_post_comment_path(post.id) %></p>
                     </div>
                   </div>
                 </div>
