--- a/app/views/likes/new.html.erb
+++ b/app/views/likes/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for [@post, @like] do |f| %>
-    <%= f.label :thoughts %>
-    <%= f.text_field :thoughts %>
+    <%= check_box_tag(:status) %>
+    <%= label_tag(:status, "Like this picture") %>
     <%= f.submit %>
 <% end %>
