fixed unlike functiolanlity

--- a/app/views/likes/new.html.erb
+++ b/app/views/likes/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_for [@post, @like] do |f| %>
+    <%= f.label :likes %>
     <%= check_box_tag(:status) %>
     <%= label_tag(:status, "Like this picture") %>
     <%= f.submit %>
