--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <p><%= @post.title %></p>
 <p><%= @post.content %></p>
 <%= image_tag @post.image.url(:medium) %>
-<p><%= link_to "Edit post", edit_post_path(@post.id) if current_user && current_user.is_owner?(@post)  %></p>
-<p><%= link_to "Delete post", post_path(@post.id), method: :delete if current_user && current_user.is_owner?(@post) %></p>
+<p><%= link_to "Edit post", edit_post_path(@post.id) if current_user && current_user.is_post_owner?(@post)  %></p>
+<p><%= link_to "Delete post", post_path(@post.id), method: :delete if current_user && current_user.is_post_owner?(@post) %></p>
