--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
     <!-- Left Nav Section -->
     <ul class="left">
       <li><%= link_to 'Add new post', new_post_path %></li>
+      <li><%= link_to 'My posts', my_posts_path %></li>
     </ul>
   </section>
 </nav>
