--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,26 @@
-<% if @post.errors.any? %>
-    <section id="errors" >
-      <h2> <%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved: </h2>
-      <ul>
-        <% @post.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
+<main>
+  <div class="row">
+    <div class="large-8 columns">
+      <div class="callout panel">
+        <% if @post.errors.any? %>
+            <section id="errors">
+              <h2> <%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved: </h2>
+              <ul>
+                <% @post.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+              </ul>
+            </section>
         <% end %>
-      </ul>
-    </section>
-<% end %>
 
-<%= form_for @post, html: {multipart: true} do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.label :content %>
-    <%= f.text_field :content %>
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-    <%= f.submit %>
-<% end %>
+        <%= form_for @post, html: {multipart: true} do |f| %>
+            <%= f.label :image %>
+            <%= f.file_field :image %>
+            <%= f.label :content %>
+            <%= f.text_area :content, placeholder: 'Add a comment here...' %>
+            <%= submit_tag("Create Post", class: 'button small') %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</main>
