--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,97 @@
-You haven't made any posts yet
+<main>
+  <div class="row">
+    <div class="large-12 columns">
+      <% if @posts.all.any? %>
+          <% @posts.all.reverse.each do |post| %>
+              <div class="row">
+                <div class="large-8 columns">
+                  <div class="callout panel">
+
+                    <p class="text-right"> <%= get_hours_since_posted(post) %> h</p>
+                    <% if current_user && if current_user.is_post_owner?(post) %>
+                        <p class="text-left"><%= link_to post.user.email, post_path(post) %></p>
+                    <% else %>
+                        <p class="text-left"><%= post.user.email %></p>
+                    <% end %>
+                    <% end %>
+
+                    <%= image_tag post.image.url(:large) %><br><br>
+
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <%= link_to "Add comment", new_post_comment_path(post.id), class: 'button small' %>
+                        <%= form_tag post_likes_path(post), method: 'post' do %>
+                            <%= submit_tag("Like", class: 'button small') unless current_user && current_user.has_liked?(post) %>
+                        <% end %>
+                        <% if current_user && if current_user.has_liked?(post) %>
+                            <%= form_tag "posts/#{post.id}/likes/#{get_like_id(post, current_user)}", method: 'delete' do %>
+                                <%= submit_tag("Unlike", class: 'button small') %>
+                            <% end %>
+                        <% end %>
+                        <% end %>
+                        <hr>
+                      </div>
+                    </div>
+                    <h5> <%= post.likes.count %> Likes</h5>
+
+                    <div class="row">
+                      <div class="large-8  small-12 columns">
+                        <!-- CONTENT -->
+                        <div class="comment">
+                          <section class="top">
+                            <h6 class="byline">
+                              <i class="icon"></i> <%= post.user.email %>
+                              <small>said
+							<span class="data">
+								<%= get_hours_since_posted(post) %> h ago
+							</span>
+                              </small>
+                            </h6>
+                          </section>
+                          <section class="content">
+                            <p> <%= post.content %> </p>
+
+                          </section>
+
+                        </div>
+                      </div>
+                    </div>
+
+                    <% if post.comments.any? %>
+                        <ul>
+                          <% post.comments.each do |comment| %>
+                              <div class="row">
+                                <div class="large-8  small-12 columns">
+                                  <!-- COMMENT -->
+                                  <div class="indented comment">
+                                    <section class="top">
+                                      <h6 class="byline">
+                                        <i class="icon"></i> <%= comment.user.email %>
+                                        <small> said
+							<span class="data">
+								<%= get_hours_since_comment(comment) %> h ago
+							</span>
+                                        </small>
+                                      </h6>
+                                    </section>
+                                    <section class="content">
+                                      <p> <%= comment.thoughts %></p>
+
+                                    </section>
+
+                                  </div>
+                                </div>
+                              </div>
+                          <% end %>
+                        </ul>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+          <% end %>
+      <% else %>
+          <p>You haven't made any posts yet!</p>
+      <% end %>
+    </div>
+  </div>
+</main>
